iac/production/02-thirdparty-01-db-service.yml
kind: Service
apiVersion: v1
metadata:
  name: db-backend-service
  namespace: viteezy-production
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Endpoints
metadata:
  name: db-backend-service
  namespace: viteezy-production
subsets:
  - addresses:
      - ip: 10.102.0.4
    ports:
      - port: 3306
