iac/production/03-services-01-backend-01-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: viteezy-production
  labels:
    app: backend
  annotations:
    cloud.google.com/backend-config: '{"ports": {"backend-port":"http-hc-config"}}'
spec:
  type: NodePort
  ports:
    - name: backend-port
      port: 8080
      nodePort: 31470
      targetPort: 8080
    - name: admin-port
      port: 8081
      nodePort: 31471
      targetPort: 8081
  selector:
    app: backend
