iac/production/03-services-03-dashboard-01-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: viteezy-production
  labels:
    app: dashboard
spec:
  type: NodePort
  ports:
    - name: "dashboard-port"
      port: 80
      nodePort: 31301
      targetPort: 80
  selector:
    app: dashboard
